# nanite

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: release.yml  verify.yml
Formula/: nanite.rb
content/licenses/: README.md
content/search-ui/: app.js  index.html  style.css
content/skills/complete-template/: SKILL.md
content/skills/complete-template/agents/: openai.yaml
content/skills/conventional-commits/: SKILL.md
content/skills/conventional-commits/agents/: openai.yaml
content/templates/default/: AGENTS.md  LICENSE  README.md
crates/nanite-agents/: Cargo.toml
crates/nanite-agents/src/: fs.rs  lib.rs  load.rs  model.rs  render.rs  sync.rs
crates/nanite-cli/: Cargo.toml  build.rs
crates/nanite-cli/src/: cli.rs  context.rs  generate.rs  gitignore_catalog.rs  jump.rs  lib.rs  license_catalog.rs  main.rs  repo.rs  setup.rs  shell.rs  skill.rs  tests.rs  ui.rs  util.rs
crates/nanite-cli/src/init/: agent.rs  debug.rs  mod.rs  progress.rs  prompting.rs
crates/nanite-cli/src/search/: assets.rs  mod.rs  server.rs  service.rs
crates/nanite-cli/tests/: cli.rs
crates/nanite-core/: Cargo.toml
crates/nanite-core/src/: app_paths.rs  config.rs  frontmatter.rs  lib.rs  prompt.rs  registry.rs  templates.rs  workspace.rs
crates/nanite-core/src/templates/: context.rs  mod.rs  model.rs  parse.rs  render.rs  repository.rs  verify.rs
crates/nanite-git/: Cargo.toml
crates/nanite-git/src/: copy.rs  lib.rs  remote.rs  workspace.rs
crates/nanite-git/src/workspace/: clone.rs  mod.rs  remove.rs  scan.rs
scripts/: update-homebrew-formula.sh
