[workspace]
members = [
    "crates/nanite-cli",
    "crates/nanite-core",
    "crates/nanite-git",
    "crates/nanite-agents",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.94"
version = "0.1.1"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
anyhow = "=1.0.102"
assert_cmd = "=2.2.0"
camino = { version = "=1.2.2", features = ["serde1"] }
clap = { version = "=4.6.0", features = ["derive", "wrap_help"] }
clap_complete = "=4.6.0"
indicatif = "=0.18.4"
inquire = "=0.9.4"
predicates = "=3.1.4"
rayon = "=1.11.0"
regex = "=1.12.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
tera = "=1.20.1"
tempfile = "=3.27.0"
time = { version = "=0.3.47", features = ["formatting", "macros", "parsing", "serde"] }
toml = "=1.1.1"
url = "=2.5.8"
walkdir = "=2.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unnameable_types = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
