[package]
name = "nanite-cli"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "nanite"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
clap_complete.workspace = true
indicatif.workspace = true
inquire.workspace = true
nanite-agents = { path = "../nanite-agents" }
nanite-core = { path = "../nanite-core" }
nanite-git = { path = "../nanite-git" }
rayon.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
time.workspace = true

[lints]
workspace = true
