[package]
name = "nanite-cli"
build = "build.rs"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "nanite"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
nanite-agents = { path = "../nanite-agents" }
nanite-core = { path = "../nanite-core" }
nanite-git = { path = "../nanite-git" }
ratatui.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
time.workspace = true

[build-dependencies]
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
time.workspace = true

[lints]
workspace = true
