[package]
name = "nanite-git"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
gix = { version = "=0.81.0", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "sha1", "worktree-mutation"] }
nanite-core = { path = "../nanite-core" }
regex.workspace = true
time.workspace = true
url.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
